Correctly detect mouseChanged between polls.

REVIEW: 112392
BUG: 323979
FIXED-IN: 4.11.2